manifests/networkpolicy/prom-operator/np-allow-kube-system-traffic.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: kube-system-to-monitoring-np
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: name=='monitoring'
  egress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: name=='monitoring'
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: monitoring-to-kube-system-np
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: name=='kube-system'
  egress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: name=='kube-system'
